--- a/index.html
+++ b/index.html
@@ -36,7 +36,33 @@
         </div>
     </header>
     <main>
+        <section class="explore-travel">
+            <div class="">
+                <div class="explore-travel-input">
+                    <h1>Explore and Travel</h1>
+                    <p>Holiday finder</p>
+                    <div>
+                        <input type="text" placeholder="Location">
+                        <input type="text" placeholder="Activity">
+                    </div>
+                    <div>
+                        <input type="text" placeholder="Grade">
+                        <input type="text" placeholder="Date">
+                    </div>
+                </div>
+                <div class="explore-travel-btn"></div>
+                <div class="btn">
+                    <a class="btn-a" href="./">Explore</a>
+                </div>
+            </div>
+            <div class="explore-travel-img">
 
+            </div>
+        </section>
+        <section class="new-way"></section>
+        <section class="featured-destination"></section>
+        <secton class="quides"></secton>
+        <footer></footer>
     </main>
 </body>
 </html>
