--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Mulish:wght@300&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <title>SUN</title>
 </head>
 <body>
@@ -41,14 +44,16 @@
                 <div class="explore-travel-input">
                     <h1>Explore and Travel</h1>
                     <p>Holiday finder</p>
-                    <div>
-                        <input type="text" placeholder="Location">
-                        <input type="text" placeholder="Activity">
-                    </div>
-                    <div>
-                        <input type="text" placeholder="Grade">
-                        <input type="text" placeholder="Date">
-                    </div>
+                    <form action="" class="form">
+                        <div>
+                            <input type="text" placeholder="Location">
+                            <input type="text" placeholder="Activity">
+                        </div>
+                        <div>
+                            <input type="text" placeholder="Grade">
+                            <input type="text" placeholder="Date">
+                        </div>
+                    </form>
                 </div>
                 <div class="explore-travel-btn"></div>
                 <div class="btn">
