--- a/index.html
+++ b/index.html
@@ -64,7 +64,17 @@
 
             </div>
         </section>
-        <section class="new-way"></section>
+        <section class="new-way">
+            <div class="new-way-img"></div>
+            <div class="new-way-text">
+                <h2>A new way to explore the world </h2>
+                <p>For decades travellers have reached for Lonely Planet books when looking to plan and execute their perfect
+                    trip, but now, they can also let Lonely Planet Experiences lead the way</p>
+                <div class="btn">
+                    <a href="./" class="btn-a">Learn more</a>
+                </div>
+            </div>
+        </section>
         <section class="featured-destination"></section>
         <secton class="quides"></secton>
         <footer></footer>
